# cryopreservation-panda

./: .gitignore  .travis.yml  Doxyfile  MyOtherPage_8md.html  MyOtherPage_8md_source.html  README.md  add_script.sh  annotated.html  cameracalibration_8cpp.html  cameracalibration_8cpp_source.html  cameracalibration_8h.html  cameracalibration_8h_source.html  classCameraCalibration-members.html  classCameraCalibration.html  classConfigHandler-members.html  classConfigHandler.html  classDeviceHandler-members.html  classDeviceHandler.html  classMarker-members.html  classMarker.html  classMotionGenerator-members.html  classMotionGenerator.html  classPrinter-members.html  classPrinter.html  classSkillHandler-members.html  classSkillHandler.html  classSkillHandlerInterface-members.html  classSkillHandlerInterface.html  classSkills-members.html  classSkills.html  classStateSerialization-members.html  classStateSerialization.html  classTaskHandler-members.html  classTaskHandler.html  classTcp__command-members.html  classTcp__command.html  classUserInterface-members.html  classUserInterface.html  classVideostream-members.html  classVideostream.html  (+182 more)
backup/: default_config.yaml
configs/: devices.yaml  main.yaml  skills.yaml  tasks.yaml
documentation/: Doxyfile  MyOtherPage.md  main_page.md
panda-controller/: .gitignore  CMakeLists.txt  install_dependecies.sh  install_nuc.sh
panda-controller/cpp-utils/include/cpp_utils/: network.hpp
panda-controller/cpp-utils/src/: json.cpp  network.cpp
panda-controller/include/: config_handler.h  motion_generator.h  printer.h  serialization.h  skills.h  task_handler.h  tcp_server.h  udp_server.h  utils.h
panda-controller/scripts/: external_build.sh  start_camera.sh
panda-controller/src/: client.cpp  config_handler.cpp  main.cpp  motion_generator.cpp  printer.cpp  serialization.cpp  skills.cpp  task_handler.cpp  tcp_server.cpp  udp_server.cpp  utils.cpp
scripts/: deploy.sh  private_stuff.sh  required_programs.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_8.js  files_9.js  files_a.js  files_b.js  functions_0.js  (+40 more)
user-interface/: install_additional_dependecies.sh  install_application_symbol.sh  install_dependecies.sh  install_interface.sh  newdevice.cpp  newdevice.h  newdevice.ui  userinterface.pro  userinterface.ui
user-interface/forms/: userinterface.ui
user-interface/include/: cameracalibration.h  devicehandler.h  marker.h  skillhandler.h  skillhandlerinterface.h  taskhandler.h  tcp_command.h  user-interface.h  videostream.h
user-interface/src/: cameracalibration.cpp  devicehandler.cpp  main.cpp  marker.cpp  skillhandler.cpp  skillhandlerinterface.cpp  taskhandler.cpp  tcp_command.cpp  user-interface.cpp  videostream.cpp
